--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,13 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+a {
+  color: #FFF;
+}
+a:hover {
+   color: #00F
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
